# ai-powered-outbound-calls-arabic

./: .gitignore  .pre-commit-config.yaml  AI-Powered Outbound Calls (Arabic) (1).docx  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0001_sprint1_data_schema.py  0002_sprint1_data_enhancements.py  0003_full_product_schema.py  0004_rag_query_cache.py  0005_customers.py  0006_unanswered_questions.py  0007_call_audits.py  6d3bc12f912a_add_customers_table_and_call_logs_.py  a64413ab4fa6_add_agents_table.py
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: agents.py  auth.py  calls.py  chat.py  customers.py  kb.py  reports.py
backend/scripts/: create_user.py  load_mock_data.py  mock_data.json  prewarm_tts.py  rag_demo.py  seed_mock_data.py
backend/tests/: conftest.py  test_agents_api.py  test_auth.py  test_call.py  test_call_flow_integration.py  test_calls_api.py  test_chat_api.py  test_customers_api.py  test_data_models.py  test_dialog.py  test_kb_api.py  test_kb_gaps.py  test_logging_config.py  test_memory.py  test_migrations.py  test_rag_answer.py  test_rag_chunking.py  test_rag_embeddings.py  test_rag_extract.py  test_rag_ingest.py  test_rag_lexical.py  test_rag_query_cache.py  test_rag_retrieve.py  test_rag_rewrite.py  test_reports_api.py  test_speech_audio.py  test_speech_greeting.py  test_speech_replies.py  test_speech_stt.py  test_speech_tts.py  test_telephony.py  test_workers.py
(+93 files in other folders)
