[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "callcenter-backend"
version = "0.1.0"
description = "AI-powered Arabic outbound call center — API, call engine, RAG chatbot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "twilio>=9.0",
    "openai>=1.30",
    "anthropic>=0.60",
    "pgvector>=0.2.5",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "pydub>=0.25",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
